# ReyEngine

./: .gitignore  CMakeLists.txt  main.cpp
apps/TileEditor/src/: TileEditor.cpp  TileEditor.h  UI.cpp  UI.h  main.cpp
editor/: Editor.cpp  Editor.h  Inspector.cpp  Inspector.h  InspectorWidgetFactory.cpp  InspectorWidgetFactory.h  SceneTree.cpp  SceneTree.h  WidgetTree.cpp  WidgetTree.h  Workspace.cpp  Workspace.h
src/2d/: BaseWidget.cpp  BaseWidget.h  Button.cpp  Button.h  Button.hpp  Camera2D.cpp  Camera2D.h  Canvas.cpp  Canvas.h  Canvas.hpp  ComboBox.cpp  ComboBox.h  Control.cpp  Control.h  Control.hpp  CustomTypes.cpp  CustomTypes.h  Dialog.h  FileBrowser.cpp  FileBrowser.h  Group.h  Label.h  Label.hpp  Layout.cpp  Layout.h  Layout.hpp  LineEdit.cpp  LineEdit.h  MenuBar.cpp  MenuBar.h  Panel.cpp  Panel.h  Panel.hpp  Positionable2D.cpp  Positionable2D.h  Renderable2D.cpp  Renderable2D.h  RichTextEditor.cpp  RichTextEditor.h  ScrollArea.cpp  (+18 more)
src/2d/unmigrated/: Button.cpp  ComboBox.cpp  ComboBox.h  Label.hpp  Layout.cpp  Layout.h  LineEdit.cpp  LineEdit.h  Panel.h  ScrollArea.cpp  ScrollArea.h  TabContainer.cpp  TextureRect.cpp  TileMap.cpp  TileMap.h  Tree.cpp  Tree.h
src/3d/: BaseBody.cpp  BaseBody.h  Camera3D.cpp  Camera3D.h  DrawInterface3D.cpp  DrawInterface3D.h  MeshBody.cpp  MeshBody.h  ModelBody.cpp  ModelBody.h  Plane3D.cpp  Plane3D.h  Viewport.cpp  Viewport.h
src/Pathfinding/: AStar.cpp  AStar.h  GraphNode.cpp  GraphNode.h  SearchNode.cpp  SearchNode.h
src/Rey2d/: BaseWidget.cpp  BaseWidget.h  Button.hpp  Canvas.hpp  Control.hpp  CustomTypes.h  Label.hpp  Layout.hpp  Panel.hpp  ScrollArea.hpp  Slider.hpp  Sprite.cpp  Sprite.h  Tree.cpp  Tree.h
src/Rey3d/: Camera3D.cpp  Camera3D.h
src/_depr/: Application.cpp  Application.h  Builder.h  Camera2D.cpp  Camera2D.h  Canvas.h  CustomTypes.cpp  CustomTypes.h  InputHandler.h  InputManager.cpp  Positionable2D.h  Property.cpp  Renderable2D.cpp  Scene.cpp  Scene.h  TypeContainer.h  TypeManager.cpp  TypeManager.h  Window.cpp  Window.h
src/_depr/3d/: BaseBody.cpp  Camera3D.cpp  Plane3D.h  Viewport.cpp
src/_depr/editor/: Inspector.h  InspectorWidgetFactory.cpp  WidgetTree.cpp
src/_depr/pathfinding/: AStar.h
src/components/: ArgParse.cpp  ArgParse.h  CTimeOperators.h  CircBuf.cpp  CircBuf.h  FileSystem.cpp  FileSystem.h  FocusGroup.h  History.h  Localization.h  Logger.cpp  Logger.h  MetaData.h  Platform.cpp  Platform.h  ProcessList.h  Shader.cpp  Shader.h  StringTools.cpp  StringTools.h  StrongUnits.h  SystemTime.h  TextEditContext.cpp  TextEditContext.h  Timer.cpp  Timer.h  TrString.h
src/editor/: Editor.cpp  Editor.h  Inspector.cpp  Inspector.h  InspectorWidgetFactory.cpp  InspectorWidgetFactory.h  SceneTree.cpp  SceneTree.h  WidgetTree.cpp  WidgetTree.h  Workspace.cpp  Workspace.h
src/engine/: Application.cpp  Application.h  BaseWidget2.cpp  Canvas.cpp  Canvas.h  Canvas2.cpp  Canvas2.h  DeferredCallList.h  Drawable2D.cpp  Drawable2D.h  Easings.h  Event.cpp  Event.h  InputContext.h  InputHandler.h  InputHandler2.h  InputManager.cpp  InputManager.h  InputManager2.h  Positionable2D.cpp  Positionable2D.h  Positionable2D2.h  Processable.cpp  Processable.h  ReyEngine.cpp  ReyEngine.h  ReyEngine3D.cpp  ReyEngine3D.h  ReyObject.h  TextEditHandler.cpp  TextEditHandler.h  TextRenderView.cpp  TextRenderView.h  TypeTree.cpp  TypeTree.h  WeakUnits.h  Widget.cpp  Widget.h  Window.cpp  Window.h  (+4 more)
src/lib/: CacheVectorMap.h  MapValueRefView.h  MathUtils.h  MiscTools.h  RefCounted.h  RefWrapCompare.h  TimeLib.h  UniqueValue.h
src/meta/: AStar.cpp  AStar.h  AbstractTree.cpp  AbstractTree.h  Application.cpp  Application.h  Application2.h  ArgParse.cpp  BaseWidget.cpp  BaseWidget.h  Builder.h  CSVParser.cpp  CSVParser.h  Canvas.cpp  Canvas.h  Component.cpp  Component.h  Config.cpp  Config.h  CustomTypes.h  DrawInterface.cpp  DrawInterface.h  Event.cpp  Event.h  Event2.cpp  EventManager.cpp  EventManager.h  FileSystem.cpp  FileSystem.h  Font.hpp  Geodetic.h  IndexedMap.cpp  IndexedMap.h  InputHandler.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  MathTools.cpp  MathTools.h  (+38 more)
src/newEngine/: Application2.cpp  Application2.h  BaseWidget2.h  Canvas2.cpp  Canvas2.h  Drawable2D.cpp  Drawable2D.h  Event2.cpp  Event2.h  InputHandler2.h  InputManager2.cpp  InputManager2.h  NewEngineTypes.h  Positionable2D2.cpp  Positionable2D2.h  ReyObject.h  Widget2.cpp  Widget2.h  Window2.cpp  Window2.h  main.cpp
src/pathfinding/: AStar.cpp
src/physics/: CollisionShape.cpp  CollisionShape.h  Physics.h
src/widgets/: ColorPicker.cpp  ColorPicker.h
test/: NewEngineFonts.cpp  NewEngineTestBasic.cpp  RootWidget.hpp  TestWidgets.cpp  TestWidgets.h  TextureTestWidget.hpp  buildTest.cpp  cppTest.cpp  csvTest.csv  newEngineTestMain.cpp  posTest.scn  raylibTest.cpp  reyTestMain.cpp  reyTestMain.h  test.lua  test.scn  themeTest.cpp  treeTest.cpp  treeTest.h  uitest.cpp
test/newEngine/: NewEngineFonts.cpp  NewEngineTestBasic.cpp  newEngineTestMain.cpp  newEngineTestNetwork.cpp
widgets/: Application.cpp  Application.h  BaseButton.cpp  BaseWidget.cpp  BaseWidget.h  Button.cpp  Button.h  Button.hpp  Canvas.hpp  Control.hpp  CustomTypes.h  DrawInterface.cpp  DrawInterface.h  Label.cpp  Label.h  Label.hpp  Layout.hpp  Panel.hpp  ScrollArea.hpp  Slider.hpp  Sprite.cpp  Sprite.h  Tree.cpp  Tree.h  Window.cpp  Window.h
widgets/3d/: Viewport.cpp  Viewport.h
widgets/meta/: Application.cpp  Application.h  ArgParse.cpp  ArgParse.h  DrawInterface.cpp  DrawInterface.h  Event.cpp  Event.h  EventManager.cpp  EventManager.h  FileSystem.cpp  FileSystem.h  Font.hpp  IndexedMap.cpp  IndexedMap.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  MathTools.cpp  MathTools.h  Property.cpp  Property.h  Scene.cpp  Scene.h  SharedFromThis.h  StringTools.cpp  StringTools.h  SystemTime.cpp  SystemTime.h  Theme.cpp  Theme.h  Time.cpp  Time.h  Timer.hpp  TypeManager.cpp  TypeManager.h  Window.cpp  Window.h
widgets/test/: RootWidget.hpp  TestWidgets.cpp  TestWidgets.h  TextureTestWidget.hpp  posTest.scn  reyTestMain.cpp  test.scn
(+27 files in other folders)
